Added Shopify Testify for screenshot testing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'idea'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'jacoco'
+apply plugin: 'com.shopify.testify'
 apply from: '../scripts/coverage/jacoco.gradle'
 apply from: '../scripts/quality/ktlint.gradle'
 apply from: '../scripts/quality/detekt.gradle'
