--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_plugin_version"
         classpath "org.jacoco:org.jacoco.core:$jacoco_version"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detekt_version"
+        classpath "com.shopify.testify:plugin:1.2.0-alpha01"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
